--- a/src/main/resources/views/PaneBusqueda.fxml
+++ b/src/main/resources/views/PaneBusqueda.fxml
@@ -16,16 +16,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="882.0" maxWidth="1262.0" minHeight="882.0" minWidth="1262.0" prefHeight="882.0" prefWidth="1262.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneBusquedaController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneBusquedaController">
    <children>
-      <VBox style="-fx-background-color: #E9E9E9;" AnchorPane.topAnchor="0.0">
+      <VBox prefWidth="1350.0" style="-fx-background-color: #E9E9E9;" AnchorPane.topAnchor="0.0">
          <children>
             <Pane style="-fx-background-color: #3B3B3B; -fx-background-radius: 8;">
                <VBox.margin>
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
                <children>
-                  <GridPane maxHeight="121.0" maxWidth="1203.0" minHeight="121.0" minWidth="1203.0" prefHeight="121.0" prefWidth="1203.0">
+                  <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="121.0" prefWidth="1285.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="60.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
@@ -73,7 +73,7 @@
                   </GridPane>
                </children>
             </Pane>
-            <ScrollPane hbarPolicy="NEVER" pannable="true" prefHeight="702.0" prefWidth="1203.0" vbarPolicy="NEVER">
+            <ScrollPane fitToWidth="true" hbarPolicy="NEVER" pannable="true" prefHeight="702.0" prefWidth="1203.0" vbarPolicy="NEVER">
                <content>
                   <GridPane prefHeight="942.0" prefWidth="1200.0" style="-fx-background-color: #3B3B3B; -fx-background-radius: 12;">
                      <columnConstraints>
@@ -86,39 +86,39 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <HBox fx:id="line0" alignment="CENTER" prefHeight="216.0" prefWidth="1287.0" spacing="20.0">
+                        <HBox fx:id="line0" alignment="CENTER" prefHeight="216.0" prefWidth="1287.0" spacing="35.0">
                            <children>
-                              <ImageView fx:id="imgResultado00" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado00" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado01" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado01" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado02" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado02" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado03" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado03" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado04" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado04" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado05" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado05" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado06" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado06" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
@@ -128,117 +128,117 @@
                               <Insets />
                            </GridPane.margin>
                         </HBox>
-                        <HBox fx:id="line1" alignment="CENTER" prefHeight="100.0" prefWidth="1200.0" spacing="20.0" GridPane.rowIndex="1">
+                        <HBox fx:id="line1" alignment="CENTER" prefHeight="100.0" prefWidth="1200.0" spacing="35.0" GridPane.rowIndex="1">
                            <children>
-                              <ImageView fx:id="imgResultado10" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado10" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado11" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado11" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado12" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado12" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado13" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado13" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado14" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado14" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado15" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado15" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado16" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado16" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
                            </children>
                         </HBox>
-                        <HBox fx:id="line2" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0" GridPane.rowIndex="2">
+                        <HBox fx:id="line2" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="35.0" GridPane.rowIndex="2">
                            <children>
-                              <ImageView fx:id="imgResultado20" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado20" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado21" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado21" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado22" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado22" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado23" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado23" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado24" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado24" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado25" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado25" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado26" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado26" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
                            </children>
                         </HBox>
-                        <HBox fx:id="line3" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0" GridPane.rowIndex="3">
+                        <HBox fx:id="line3" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="35.0" GridPane.rowIndex="3">
                            <children>
-                              <ImageView fx:id="imgResultado30" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado30" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado31" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado31" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado32" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado32" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado33" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado33" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado34" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado34" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado35" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado35" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgResultado36" fitHeight="210.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgResultado36" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterSerie.jpg" />
                                  </image>
@@ -250,7 +250,7 @@
                         </HBox>
                      </children>
                      <padding>
-                        <Insets left="30.0" right="30.0" top="30.0" />
+                        <Insets bottom="30.0" left="30.0" right="30.0" top="40.0" />
                      </padding>
                   </GridPane>
                </content>
