--- a/src/main/resources/views/PaneDetalle.fxml
+++ b/src/main/resources/views/PaneDetalle.fxml
@@ -15,9 +15,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="882.0" maxWidth="1262.0" minHeight="882.0" minWidth="1262.0" prefHeight="882.0" prefWidth="1262.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneDetalleController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneDetalleController">
    <children>
-      <VBox layoutY="0.7999999999999972" prefHeight="882.0" prefWidth="1262.0" AnchorPane.topAnchor="-30.0">
+      <VBox layoutY="0.7999999999999972" prefHeight="800.0" prefWidth="1350.0" AnchorPane.topAnchor="-30.0">
          <children>
             <VBox alignment="TOP_CENTER" style="-fx-background-color: #3B3B3B; -fx-background-radius: 12;">
                <children>
@@ -26,7 +26,7 @@
                         <GridPane>
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.0" minWidth="260.0" prefWidth="260.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="570.0" minWidth="570.0" prefWidth="570.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="640.0" minWidth="640.0" prefWidth="640.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints maxHeight="390.0" minHeight="390.0" prefHeight="390.0" vgrow="SOMETIMES" />
@@ -34,7 +34,7 @@
                             <RowConstraints minHeight="35.0" prefHeight="35.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <ImageView fx:id="imgPoster" fitHeight="390.0" fitWidth="260.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                              <ImageView fx:id="imgPoster" fitHeight="380.0" fitWidth="260.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
                                  </image>
@@ -89,7 +89,7 @@
                                           </Label>
                                        </children>
                                     </HBox>
-                                    <ImageView fx:id="imgLike" fitHeight="45.0" fitWidth="45.0" onDragDetected="#imgLikePressed" pickOnBounds="true" preserveRatio="true">
+                                    <ImageView fx:id="imgLike" fitHeight="42.0" fitWidth="42.0" onDragDetected="#imgLikePressed" pickOnBounds="true" preserveRatio="true">
                                        <VBox.margin>
                                           <Insets left="15.0" top="35.0" />
                                        </VBox.margin>
@@ -126,7 +126,7 @@
                               </Button>
                               <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                  <children>
-                                    <Button fx:id="btnTrailer" mnemonicParsing="false" onAction="#btnTrailerPressed" prefHeight="25.0" prefWidth="380.0" text="Ver Trailer">
+                                    <Button fx:id="btnTrailer" mnemonicParsing="false" onAction="#btnTrailerPressed" prefHeight="25.0" prefWidth="448.0" text="Ver Trailer">
                                        <HBox.margin>
                                           <Insets left="10.0" right="10.0" />
                                        </HBox.margin>
@@ -143,7 +143,7 @@
                               </HBox>
                               <HBox style="-fx-background-color: black;" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                  <children>
-                                    <Label fx:id="lblComentario" graphicTextGap="6.0" prefHeight="27.0" prefWidth="500.0" text="&gt;_Añadir comentario:   " textFill="#02ffa1">
+                                    <Label fx:id="lblComentario" graphicTextGap="6.0" prefHeight="27.0" prefWidth="580.0" text="&gt;_Añadir comentario:   " textFill="#02ffa1">
                                        <padding>
                                           <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </padding>
@@ -212,14 +212,14 @@
                                     <Insets bottom="20.0" left="8.0" />
                                  </VBox.margin>
                               </Label>
-                              <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="280.0">
+                              <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="320.0">
                                  <children>
                                     <ImageView fx:id="imgReparto0" fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
                                        <HBox.margin>
                                           <Insets right="15.0" />
                                        </HBox.margin>
                                     </ImageView>
-                                    <Label fx:id="lblReparto0" prefHeight="25.0" prefWidth="195.0" text="ActorActriz" textFill="WHITE">
+                                    <Label fx:id="lblReparto0" prefHeight="25.0" prefWidth="210.0" text="ActorActriz" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold" size="16.0" />
                                        </font>
@@ -229,14 +229,14 @@
                                     <Insets bottom="10.0" />
                                  </padding>
                               </HBox>
-                              <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="280.0">
+                              <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="320.0">
                                  <children>
                                     <ImageView fx:id="imgReparto1" fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
                                        <HBox.margin>
                                           <Insets right="15.0" />
                                        </HBox.margin>
                                     </ImageView>
-                                    <Label fx:id="lblReparto1" prefHeight="25.0" prefWidth="195.0" text="ActorActriz" textFill="WHITE">
+                                    <Label fx:id="lblReparto1" prefHeight="25.0" prefWidth="210.0" text="ActorActriz" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold" size="16.0" />
                                        </font>
@@ -246,14 +246,14 @@
                                     <Insets bottom="10.0" />
                                  </padding>
                               </HBox>
-                              <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="280.0">
+                              <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="320.0">
                                  <children>
                                     <ImageView fx:id="imgReparto2" fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
                                        <HBox.margin>
                                           <Insets right="15.0" />
                                        </HBox.margin>
                                     </ImageView>
-                                    <Label fx:id="lblReparto2" prefHeight="25.0" prefWidth="195.0" text="ActorActriz" textFill="WHITE">
+                                    <Label fx:id="lblReparto2" prefHeight="25.0" prefWidth="210.0" text="ActorActriz" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold" size="16.0" />
                                        </font>
@@ -263,14 +263,14 @@
                                     <Insets bottom="10.0" />
                                  </padding>
                               </HBox>
-                              <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="280.0">
+                              <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="320.0">
                                  <children>
                                     <ImageView fx:id="imgReparto3" fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
                                        <HBox.margin>
                                           <Insets right="15.0" />
                                        </HBox.margin>
                                     </ImageView>
-                                    <Label fx:id="lblReparto3" prefHeight="25.0" prefWidth="195.0" text="ActorActriz" textFill="WHITE">
+                                    <Label fx:id="lblReparto3" prefHeight="25.0" prefWidth="210.0" text="ActorActriz" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold" size="16.0" />
                                        </font>
@@ -300,7 +300,7 @@
                               <Insets bottom="10.0" top="20.0" />
                            </VBox.margin>
                         </Label>
-                        <Label fx:id="lblSinopsis" alignment="TOP_LEFT" prefHeight="191.0" prefWidth="1166.0" text="Ejemplo texto sinopsis" textFill="WHITE" wrapText="true">
+                        <Label fx:id="lblSinopsis" alignment="TOP_LEFT" prefHeight="190.0" prefWidth="1250.0" text="Ejemplo texto sinopsis" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
