--- a/src/main/resources/views/PaneNueva.fxml
+++ b/src/main/resources/views/PaneNueva.fxml
@@ -20,15 +20,15 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="882.0" maxWidth="1262.0" minHeight="882.0" minWidth="1262.0" prefHeight="882.0" prefWidth="1262.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneNueva">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneNueva">
    <children>
-      <VBox prefHeight="882.0" prefWidth="1262.0" style="-fx-background-color: #E9E9E9;" AnchorPane.topAnchor="0.0">
+      <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1350.0" style="-fx-background-color: #E9E9E9;" AnchorPane.topAnchor="0.0">
          <children>
             <Pane style="-fx-background-color: #3B3B3B; -fx-background-radius: 12;">
                <children>
                   <VBox>
                      <children>
-                        <GridPane prefHeight="731.0" prefWidth="1102.0">
+                        <GridPane prefHeight="680.0" prefWidth="1200.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="320.0" minWidth="320.0" prefWidth="320.0" />
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="700.0" minWidth="10.0" prefWidth="450.0" />
@@ -38,18 +38,18 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <GridPane>
+                              <GridPane prefHeight="697.0" prefWidth="320.0">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                 </columnConstraints>
                                 <rowConstraints>
-                                  <RowConstraints maxHeight="551.0" minHeight="10.0" prefHeight="491.0" vgrow="SOMETIMES" />
-                                  <RowConstraints maxHeight="358.0" minHeight="10.0" prefHeight="240.0" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="520.0" minHeight="10.0" prefHeight="459.0" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="250.0" minHeight="10.0" prefHeight="272.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
                                     <VBox prefHeight="200.0" prefWidth="100.0">
                                        <children>
-                                          <ImageView fx:id="imgPoster" fitHeight="380.0" fitWidth="280.0" onMouseClicked="#imgPosterClicked" pickOnBounds="true" preserveRatio="true">
+                                          <ImageView fx:id="imgPoster" fitHeight="370.0" fitWidth="280.0" onMouseClicked="#imgPosterClicked" pickOnBounds="true" preserveRatio="true">
                                              <VBox.margin>
                                                 <Insets left="10.0" />
                                              </VBox.margin>
@@ -239,7 +239,7 @@
                               </GridPane>
                               <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
                                  <children>
-                                    <HBox alignment="CENTER" prefHeight="116.0" prefWidth="575.0">
+                                    <HBox alignment="CENTER" prefHeight="80.0" prefWidth="575.0">
                                        <children>
                                           <RadioButton fx:id="rbPelicula" mnemonicParsing="false" selected="true" text="Nueva Película" textFill="WHITE">
                                              <HBox.margin>
@@ -262,9 +262,9 @@
                                           </RadioButton>
                                        </children>
                                     </HBox>
-                                    <GridPane prefHeight="545.0" prefWidth="561.0">
+                                    <GridPane prefHeight="520.0" prefWidth="561.0">
                                       <columnConstraints>
-                                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="281.0" minWidth="10.0" prefWidth="108.0" />
+                                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="110.0" />
                                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="478.0" minWidth="10.0" prefWidth="467.0" />
                                       </columnConstraints>
                                       <rowConstraints>
@@ -274,7 +274,7 @@
                                           <RowConstraints minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="250.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="220.0" vgrow="SOMETIMES" />
                                       </rowConstraints>
                                        <children>
                                           <Label text="Título:" textFill="WHITE">
@@ -342,21 +342,21 @@
                                                 <Insets left="10.0" right="40.0" />
                                              </GridPane.margin>
                                           </TextField>
-                                          <TextField fx:id="txtSinopsis" prefHeight="240.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                                          <TextField fx:id="txtSinopsis" prefHeight="210.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                                              <GridPane.margin>
                                                 <Insets left="10.0" right="40.0" />
                                              </GridPane.margin>
                                           </TextField>
                                        </children>
                                     </GridPane>
-                                    <HBox alignment="CENTER" prefHeight="116.0" prefWidth="575.0">
+                                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="575.0">
                                        <children>
                                           <Button fx:id="btnRestablecer" mnemonicParsing="false" onAction="#btnRestablecerPressed" text="Restablecer">
                                              <font>
                                                 <Font name="System Bold" size="14.0" />
                                              </font>
                                              <HBox.margin>
-                                                <Insets left="80.0" right="40.0" />
+                                                <Insets left="65.0" right="40.0" />
                                              </HBox.margin>
                                           </Button>
                                           <Button fx:id="btnGuardar" mnemonicParsing="false" onAction="#btnGuardarPressed" text="Guardar">
