--- a/src/main/resources/views/PaneProximamente.fxml
+++ b/src/main/resources/views/PaneProximamente.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="882.0" maxWidth="1262.0" minHeight="882.0" minWidth="1262.0" prefHeight="882.0" prefWidth="1262.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneProximamenteController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneProximamenteController">
    <children>
-      <VBox alignment="TOP_CENTER" maxHeight="882.0" maxWidth="1271.0" minHeight="882.0" minWidth="1262.0" prefHeight="882.0" prefWidth="1262.0">
+      <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1350.0">
          <children>
             <VBox alignment="TOP_CENTER" style="-fx-background-color: #3B3B3B; -fx-background-radius: 12;">
                <children>
