--- a/src/main/resources/views/PaneUsuario.fxml
+++ b/src/main/resources/views/PaneUsuario.fxml
@@ -15,9 +15,9 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="882.0" maxWidth="1262.0" minHeight="882.0" minWidth="1262.0" prefHeight="882.0" prefWidth="1262.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneUsuarioController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneUsuarioController">
    <children>
-      <VBox alignment="TOP_CENTER" maxHeight="882.0" maxWidth="1262.0" minHeight="882.0" minWidth="1262.0" prefHeight="882.0" prefWidth="1262.0" style="-fx-background-color: #E9E9E9;" AnchorPane.topAnchor="0.0">
+      <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1350.0" style="-fx-background-color: #E9E9E9;" AnchorPane.topAnchor="0.0">
          <children>
             <VBox alignment="TOP_CENTER" style="-fx-background-color: #3B3B3B; -fx-background-radius: 12;">
                <padding>
@@ -34,7 +34,7 @@
                               <Insets right="10.0" />
                            </HBox.margin>
                         </ImageView>
-                        <VBox prefHeight="160.0" prefWidth="580.0">
+                        <VBox prefHeight="160.0" prefWidth="740.0">
                            <children>
                               <Label fx:id="lblUsername" text="Usuario" textFill="WHITE">
                                  <font>
@@ -120,6 +120,9 @@
                                  <font>
                                     <Font name="System Bold" size="18.0" />
                                  </font>
+                                 <GridPane.margin>
+                                    <Insets bottom="3.0" />
+                                 </GridPane.margin>
                               </Label>
                               <Label text="Nombre de usuario:" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                                  <font>
@@ -191,7 +194,7 @@
                               </Label>
                               <VBox GridPane.rowIndex="1">
                                  <children>
-                                    <HBox prefHeight="30.0" prefWidth="200.0">
+                                    <HBox fx:id="hBoxDispositivo1" prefHeight="30.0" prefWidth="200.0">
                                        <children>
                                           <ImageView fx:id="imgDispositivo1" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -206,14 +209,19 @@
                                                 <Font size="20.0" />
                                              </font>
                                           </Label>
-                                          <Label fx:id="lblDispositivo1" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE">
+                                          <Label fx:id="lblDispositivo1" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE" wrapText="true">
                                              <font>
                                                 <Font name="System Bold" size="12.0" />
                                              </font>
                                           </Label>
+                                          <ImageView fx:id="imgDeleteDisp1" fitHeight="24.0" fitWidth="24.0" onMouseClicked="#imgDeleteDisp1Pressed" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../images/others/remove.png" />
+                                             </image>
+                                          </ImageView>
                                        </children>
                                     </HBox>
-                                    <HBox layoutX="10.0" layoutY="10.0" prefHeight="30.0" prefWidth="200.0">
+                                    <HBox fx:id="hBoxDispositivo2" layoutX="10.0" layoutY="10.0" prefHeight="30.0" prefWidth="200.0">
                                        <children>
                                           <ImageView fx:id="imgDispositivo2" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -228,14 +236,19 @@
                                                 <Font size="20.0" />
                                              </font>
                                           </Label>
-                                          <Label fx:id="lblDispositivo2" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE">
+                                          <Label fx:id="lblDispositivo2" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE" wrapText="true">
                                              <font>
                                                 <Font name="System Bold" size="12.0" />
                                              </font>
                                           </Label>
+                                          <ImageView fx:id="imgDeleteDisp2" fitHeight="24.0" fitWidth="24.0" onMouseClicked="#imgDeleteDisp2Pressed" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../images/others/remove.png" />
+                                             </image>
+                                          </ImageView>
                                        </children>
                                     </HBox>
-                                    <HBox layoutX="10.0" layoutY="40.0" prefHeight="30.0" prefWidth="200.0">
+                                    <HBox fx:id="hBoxDispositivo3" layoutX="10.0" layoutY="40.0" prefHeight="30.0" prefWidth="200.0">
                                        <children>
                                           <ImageView fx:id="imgDispositivo3" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -250,14 +263,19 @@
                                                 <Font size="20.0" />
                                              </font>
                                           </Label>
-                                          <Label fx:id="lblDispositivo3" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE">
+                                          <Label fx:id="lblDispositivo3" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE" wrapText="true">
                                              <font>
                                                 <Font name="System Bold" size="12.0" />
                                              </font>
                                           </Label>
+                                          <ImageView fx:id="imgDeleteDisp3" fitHeight="24.0" fitWidth="24.0" onMouseClicked="#imgDeleteDisp3Pressed" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../images/others/remove.png" />
+                                             </image>
+                                          </ImageView>
                                        </children>
                                     </HBox>
-                                    <HBox layoutX="10.0" layoutY="70.0" prefHeight="30.0" prefWidth="200.0">
+                                    <HBox fx:id="hBoxDispositivo4" layoutX="10.0" layoutY="70.0" prefHeight="30.0" prefWidth="200.0">
                                        <children>
                                           <ImageView fx:id="imgDispositivo4" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -272,11 +290,43 @@
                                                 <Font size="20.0" />
                                              </font>
                                           </Label>
-                                          <Label fx:id="lblDispositivo4" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE">
+                                          <Label fx:id="lblDispositivo4" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE" wrapText="true">
                                              <font>
                                                 <Font name="System Bold" size="12.0" />
                                              </font>
                                           </Label>
+                                          <ImageView fx:id="imgDeleteDisp4" fitHeight="24.0" fitWidth="24.0" onMouseClicked="#imgDeleteDisp4Pressed" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../images/others/remove.png" />
+                                             </image>
+                                          </ImageView>
+                                       </children>
+                                    </HBox>
+                                    <HBox fx:id="hBoxDispositivo5" prefHeight="30.0" prefWidth="200.0">
+                                       <children>
+                                          <ImageView fx:id="imgDispositivo5" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../images/others/pcIcon.png" />
+                                             </image>
+                                             <HBox.margin>
+                                                <Insets top="5.0" />
+                                             </HBox.margin>
+                                          </ImageView>
+                                          <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="25.0" text="·" textAlignment="CENTER" textFill="WHITE">
+                                             <font>
+                                                <Font size="20.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="lblDispositivo5" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE" wrapText="true">
+                                             <font>
+                                                <Font name="System Bold" size="12.0" />
+                                             </font>
+                                          </Label>
+                                          <ImageView fx:id="imgDeleteDisp4" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../images/others/remove.png" />
+                                             </image>
+                                          </ImageView>
                                        </children>
                                     </HBox>
                                  </children>
@@ -291,6 +341,9 @@
                                  <font>
                                     <Font name="System Bold" size="12.0" />
                                  </font>
+                                 <GridPane.margin>
+                                    <Insets left="40.0" />
+                                 </GridPane.margin>
                               </Button>
                            </children>
                         </GridPane>
